# mine-spec

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
mine_spec/dto/: admin.py  object.py
mine_spec/exceptions/: base.py
mine_spec/ports/: admin.py  object_storage.py
